Fixed #study layout on mobile

--- a/app/assets/less/components/_component_content_study.less
+++ b/app/assets/less/components/_component_content_study.less
@@ -368,6 +368,16 @@
       //white-space: nowrap;
     }
   }
+  #study {
+    .lo-one-third {
+      width: 100%;
+      //background: pink;
+      img {
+        width: 100%;
+      }
+    }
+  }
+
   .study-course-facts {
     margin: inherit;
   }
@@ -428,6 +438,19 @@
       }
     }
   }
+
+  #study {
+    .lo-one-third {
+      width: 48%;
+      float: left;
+      //background: pink;
+      img {
+        width: 100%;
+      }
+    }
+  }
+
+
 }
 
 .large() {
